[gd_scene format=3 uid="uid://skv8lyehbpdh"]

[ext_resource type="PackedScene" uid="uid://6grywi7s2bbv" path="res://Resources/3D/campfire.glb" id="1_8ysen"]
[ext_resource type="Script" uid="uid://c6tkbfcysr7mj" path="res://Scripts/Campfire.gd" id="1_hkl62"]
[ext_resource type="Texture2D" uid="uid://c08vq4pq6eltk" path="res://Resources/totem.png" id="2_wyony"]
[ext_resource type="PackedScene" uid="uid://c2vdrg3pgyixh" path="res://Scenes/LoadingIndicator.tscn" id="4_r3b3c"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wyony"]
height = 0.71362305

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hkl62"]
height = 11.854004
radius = 1.2226563

[sub_resource type="SphereShape3D" id="SphereShape3D_wyony"]
radius = 4.882787

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hkl62"]
cull_mode = 2
albedo_color = Color(0.1764706, 0.4392157, 1, 0.3137255)
proximity_fade_enabled = true

[sub_resource type="SphereMesh" id="SphereMesh_r3b3c"]
material = SubResource("StandardMaterial3D_hkl62")
radius = 5.0
height = 10.0

[sub_resource type="ViewportTexture" id="ViewportTexture_r3b3c"]
viewport_path = NodePath("SubViewport")

[node name="Campfire" type="Node3D" unique_id=1658491565]
script = ExtResource("1_hkl62")

[node name="Mesh" parent="." unique_id=289914508 instance=ExtResource("1_8ysen")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.02848214, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="Mesh" unique_id=1995173284]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02848214, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mesh/StaticBody3D" unique_id=2139320176]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3458252, 0)
shape = SubResource("CylinderShape3D_wyony")

[node name="Sprite3D" type="Sprite3D" parent="." unique_id=337955046]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 1.1126175, -1.1787517)
billboard = 2
texture = ExtResource("2_wyony")

[node name="StaticBody3D" type="StaticBody3D" parent="Sprite3D" unique_id=2123529361]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sprite3D/StaticBody3D" unique_id=1446806426]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.024631023, -0.39217758, 0.069123745)
shape = SubResource("CylinderShape3D_hkl62")

[node name="Area3D" type="Area3D" parent="." unique_id=890042312]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=2074852294]
shape = SubResource("SphereShape3D_wyony")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D" unique_id=914594292]
visible = false
mesh = SubResource("SphereMesh_r3b3c")

[node name="SubViewport" type="SubViewport" parent="." unique_id=1342653582]
transparent_bg = true
size = Vector2i(64, 64)

[node name="LoadingIndicator" parent="SubViewport" unique_id=1722818792 instance=ExtResource("4_r3b3c")]

[node name="Sprite3D2" type="Sprite3D" parent="." unique_id=1704078392]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2571585, 0)
billboard = 2
texture = SubResource("ViewportTexture_r3b3c")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
